# JobFlint

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  deploy.yml
alembic/: env.py
alembic/versions/: d186a4902c34_create_jobs_table.py
app/: broker.py  config.py  dependencies.py  main.py  scheduler.py
app/clients/: __init__.py  serper.py
app/clients/llm/: base.py  gemini_client.py  openai_client.py  prompts.py  router.py
app/db/: __init__.py  repository.py  session.py
app/models/: __init__.py  work.py
app/notifications/: slack.py
app/schemas/: __init__.py  job.py
app/services/: __init__.py  dedup.py  filter.py  noise_stripper.py
app/tasks/: __init__.py  extract.py  fetch.py  notify.py
docker/: Dockerfile  entrypoint.sh
tests/: conftest.py
tests/integration/: test_repository.py  test_tasks.py
tests/unit/: test_broker.py  test_dedup.py  test_extraction.py  test_fetching.py  test_filter.py  test_llm_router.py  test_noise_stripper.py  test_notify_task.py  test_openai_client.py  test_schemas.py  test_serper_client.py  test_slack.py
